--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,6 +1,7 @@
 .home {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   background-color: var(--background);
   padding: 50px 10%;
 
@@ -10,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 
     h1 {
       text-transform: uppercase;
